--- a/index.html
+++ b/index.html
@@ -329,7 +329,7 @@
         <h2>Contact Me</h2>
         <p style="color:#bbb;">Let's collaborate or chat about ideas!</p>
         <div>
-            <span><a href="mailto:sangwanprakrit@gmail.com">Email</a></span>
+            <span><a href="https://mail.google.com/mail/?view=cm&to=sangwanprakrit@gmail.com" target="_blank">Email</a></span>
             <span><a href="https://github.com/Prakrit-Sangwan2402" target="_blank">GitHub</a></span>
             <span><a href="https://codeforces.com/profile/Prakrit_Sangwan" target="_blank">Codeforces</a></span>
             <span><a href="https://www.linkedin.com/in/prakrit-sangwan-799095376/" target="_blank">LinkedIn</a></span>
@@ -342,5 +342,6 @@
     </footer>
 
 </body>
+
 
 </html>
