--- a/index.html
+++ b/index.html
@@ -227,6 +227,55 @@
             margin-left: 5px;
         }
 
+        form {
+            margin-top: 40px;
+            display: flex;
+            flex-direction: column;
+            gap: 15px;
+            align-items: center;
+        }
+
+        input,
+        textarea {
+            width: 90%;
+            max-width: 500px;
+            padding: 12px;
+            border: 1px solid #ff5e00;
+            border-radius: 8px;
+            background-color: #202020;
+            color: #ddd;
+            font-size: 15px;
+            transition: 0.3s;
+        }
+
+        input:focus,
+        textarea:focus {
+            border-color: #ff7f2a;
+            outline: none;
+            box-shadow: 0 0 5px rgba(255, 94, 0, 0.5);
+        }
+
+        textarea {
+            resize: none;
+            height: 120px;
+        }
+
+        button {
+            background-color: #ff5e00;
+            color: white;
+            border: none;
+            padding: 12px 25px;
+            border-radius: 25px;
+            font-size: 16px;
+            cursor: pointer;
+            transition: 0.3s;
+        }
+
+        button:hover {
+            background-color: #ff7f2a;
+            transform: translateY(-2px);
+        }
+
         @media (max-width: 850px) {
             .hero-container {
                 flex-direction: column;
@@ -328,6 +377,12 @@
     <section id="contact" class="contact">
         <h2>Contact Me</h2>
         <p style="color:#bbb;">Let's collaborate or chat about ideas!</p>
+        <form action="#" method="post">
+            <input type="text" name="name" placeholder="Your Name" required>
+            <input type="email" name="email" placeholder="Your Email" required>
+            <textarea name="message" placeholder="Your Message" required></textarea>
+            <button type="submit">Send Message</button>
+        </form>
         <div>
             <span><a href="https://mail.google.com/mail/?view=cm&to=sangwanprakrit@gmail.com" target="_blank">Email</a></span>
             <span><a href="https://github.com/Prakrit-Sangwan2402" target="_blank">GitHub</a></span>
@@ -345,3 +400,4 @@
 
 
 </html>
+
